--- a/table.css
+++ b/table.css
@@ -10,6 +10,9 @@
 h3{
     color: white;
 }
+p{
+  font-weight: bold;
+}
 body {
 	margin: 100px;
 	background: linear-gradient(45deg, #49a09d, #5f2c82);
